# online_shop

./: .env.sample  catalog_data.json  groups.json  pyproject.toml
catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
catalog/management/commands/: fill.py
catalog/migrations/: 0001_initial.py  0002_product_manufactured_at_alter_product_category.py  0003_alter_product_price.py  0004_remove_product_manufactured_at.py  0005_article.py  0006_version.py  0007_product_owner.py  0008_alter_product_options_product_is_published.py  0009_alter_product_options.py
catalog/templates/catalog/: article_confirm_delete.html  article_detail.html  article_form.html  article_list.html  base.html  contact.html  index.html  page_product.html  product_detail.html  product_form.html  product_list.html
catalog/templates/catalog/includes/: inc_menu.html
catalog/templatetags/: my_tags.py
config/: settings.py  urls.py
users/: admin.py  forms.py  models.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_user_token.py
users/templates/users/: login.html  password_reset_form.html  reset_password.html  user_form.html
