[tool.poetry]
name = "online-shop"
version = "0.1.0"
description = ""
authors = ["Evgeny Safonov <jeka-luda@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
psycopg2-binary = "^2.9.9"
pillow = "^10.2.0"
ipython = "^8.21.0"
pytils = "^0.4.1"
django = "4.2.2"
certifi = "^2024.2.2"
redis = "^5.0.3"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
